<resources>
    <string name="app_name">ING Project</string>
    <string name="usericon">userIcon</string>
    <string name="title">Title:</string>
    <string name="comments">Comments</string>
    <string name="Name">Name:</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="website">Website:</string>
    <string name="street">Street:</string>
    <string name="city">City:</string>
    <string name="zipcode">Zipcode:</string>
    <string name="photos">PHOTOS</string>
</resources>
