<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.lswarss.ing_project.ui.UserViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/username_placeholder"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@{viewModel.selectedUser.user.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/username_placeholder"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_placeholder"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_placeholder" />

        <TextView
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.selectedUser.user.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/email_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/website_placeholder"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/website"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_placeholder" />

        <TextView
            android:id="@+id/website"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.selectedUser.user.website}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/website_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/street_placeholder"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/street"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website_placeholder" />

        <TextView
            android:id="@+id/street"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.selectedUser.user.address.street}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/street_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/website" />

        <TextView
            android:id="@+id/city_placeholder"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/street_placeholder" />

        <TextView
            android:id="@+id/city"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.selectedUser.user.address.city}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/city_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/street" />

        <TextView
            android:id="@+id/zipcode_placeholder"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/zipcode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_placeholder" />

        <TextView
            android:id="@+id/zipcode"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.selectedUser.user.address.zipcode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/zipcode_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zipcode_placeholder"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/photosBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>